# sam3-service

./: .gitignore  PRD.md  README.md  SAM3_API_DEVELOPMENT_GUIDE.md  TECHNICAL_DESIGN.md  pyproject.toml
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  Player.tsx  api.ts  styles.css
src/sam3_service/: __init__.py  config.py  db.py  errors.py  exporter.py  main.py  media.py  schemas.py  segmenter.py  storage.py  worker.py
tests/: test_cors.py  test_exporter.py  test_pipeline.py  test_segmenter.py
